# launcher

./: .codeclimate.yml  .dockerignore  .gitattributes  .gitignore  .golangci.yml  .mockery.yml  .travis.yml  AGENTS.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Gopkg.toml  LICENSE  Makefile  README.md  WORKSPACE  build.sh  build_pkg.sh  cloudbuild.yml  glide.yaml  go.mod  go.sum  go.sum-old  main.go  osquery.go  platform.go  release.sh  tarbin.sh
cmd/grpc.ext/: BUILD.bazel  grpc.go
cmd/launcher/: BUILD.bazel  README.md  console_other.go  console_windows.go  control.go  control_windows.go  debug_toggle.go  debug_toggle_windows.go  desktop.go  desktop_test.go  detect_presence.go  dial_test.go  doctor.go  doctor_test.go  enable.go  enabler.go  enroll.go  extension.go  flare.go  gomaxprocs_observer.go  good-key.pem  interactive.go  launcher.go  launcher_test.go  logs.go  main.go  main_test.go  main_windows.go  nativemessaginghost.go  options.go  options_test.go  osquery_runtime.go  paths.go  postinst.go  query_target_updater.go  query_windowsupdates_other.go  query_windowsupdates_windows.go  recheck.go  restart_service_other.go  restart_service_windows.go  (+33 more)
cmd/launcher-pummel/: BUILD.bazel  README.md  launcher-pummel.go
cmd/launcher.ext/: BUILD.bazel  launcher-extension.go
cmd/launcher/desktop/: desktop.go  icon.go  icon_windows.go
cmd/launcher/diag/: checkup.go
cmd/launcher/internal/: ca-bundle.crt  install_ca_certs.go  install_ca_certs_test.go  record_launcher_version.go  record_launcher_version_test.go  record_metadata.go  record_metadata_test.go
cmd/launcher/restartservice/: restart_service_other.go  restart_service_windows.go  windows_restart_service.md
cmd/launcher/systray/: icon.go  icon_windows.go  systray.go
cmd/launcher/test_app_resources/: readme.md
cmd/launcher/testdata/: bad-cert.pem
cmd/launcher/updater/: updater.go  updater_test.go
cmd/launcher/watchdog/: controller_other.go  controller_windows.go  watchdog_service_windows.go  windows_watchdog.md
cmd/osquery-extension/: BUILD.bazel  osquery-extension.go
cmd/package-builder/: BUILD.bazel  README.md  dev.go  download.go  environments.go  list-targets.go  mirror.go  package-builder.go  version.go
pkg/autoupdate/: BUILD.bazel  autoupdate.go  autoupdate_test.go  errors.go  errors_test.go  findnew.go  findnew_test.go  handler.go  handler_windows.go  helpers.go  helpers_test.go  helpers_windows.go  mocklogger_test.go  tuf_autoupdate.go  tuf_autoupdate_test.go  tufclient.go
pkg/autoupdate/tuf/: autoupdate.go  autoupdate_test.go  channel_version.go  errors.go  finalize_linux.go  finalize_other.go  find_new.go  library_lookup.go  library_lookup_test.go  library_manager.go  library_manager_darwin.go  library_manager_linux.go  library_manager_test.go  library_manager_windows.go  library_manager_windows_test.go  mock_librarian.go  mock_librarian_test.go  mock_querier_test.go  mock_read_only_update_library_test.go  mockery.md  read_only_library.go  read_only_library_test.go  read_only_tuf_client.go  tuf_util.go  util_darwin.go  util_linux.go  util_test.go  util_windows.go
pkg/control/: BUILD.bazel  control.go  option.go  shells.go
pkg/debug/: BUILD.bazel  debug.go  debug_test.go  debugserver.go  signal_debug.go  signal_debug_windows.go  toggle.go
pkg/debug/checkups/: appindicator.go  bboltdb.go  binary_directory.go  checkpoint.go  checkpoint_test.go  checkups.go  connectivity.go  dns.go  dns_test.go  enroll-secret.go  files.go  flare-environment-platform-specifics.go  gnome-extensions.go  gnome_extensions_linux.go  helpers_other.go  helpers_windows.go  host.go  host_test.go  (+36 more)
pkg/log/: BUILD.bazel  log.go  log_posix.go  log_test.go  log_windows.go
pkg/osquery/: BUILD.bazel  enrollment_details.go  enrollment_details_test.go  extension.go  extension_serial.go  extension_serial_docker.go  extension_serial_fakeserial.go  extension_test.go  extract_certs_windows_test.go  extract_windows_certs.go  initial-runner.go  initial_runner.go  install_ca_certs.go  install_ca_certs_test.go  install_ca_certs_windows.go  install_ca_certs_windows_test.go  keys.go  log_publication_state.go  log_publication_state_test.go  osquery.go  platform.go
pkg/packaging/: BUILD.bazel  build.go  detectLauncherVersion.go  detectLauncherVersion_test.go  fetch.go  formatVersion.go  formatVersion_windows.go  helpers.go  helpers_test.go  osquery.go  packaging.go  packaging_test.go  prepare.go  render_service.go  render_service.go.old  target.go  target_test.go
pkg/ptycmd/: BUILD.bazel  command.go  command_windows.go  options.go
pkg/service/: BUILD.bazel  check_health.go  client.go  client_grpc.go  client_jsonrpc.go  client_jsonrpc_test.go  client_noop.go  dial_test.go  disable_device_test.go  error_handling.go  middleware.go  publish_logs.go  publish_results.go  publish_results_test.go  request_config.go  request_enrollment.go  request_queries.go  server.go  server_jsonrpc.go  service.go  timebucket.go  timebucket_test.go  tls.go  tls_test.go  util.go  util_test.go
pkg/simulator/: BUILD.bazel  hosts.go  hosts_test.go  simulator.go  simulator_test.go
pkg/webtty/: BUILD.bazel
tools/: BUILD.bazel  download-osquery.go  github-add-to-project.sh  zcc  zxx
tools/autoupdate-v1-tests/: README.md  main.go  runlauncher_return.go  runloop.go  svc-manager_windows.go  svc.go  svc_windows.go  upgrade.go
tools/generate/: 2.11.2.json  generate.go
tools/images/: Kolide.icns
tools/notary/: BUILD.bazel  generate_tuf.go
tools/packaging/: Kolide_Endpoint_Agent.provisionprofile  LauncherTemplate_Info.plist  building.go  clean_host.sh  darwin.go  darwin_test.go  embedded.provisionprofile  entitlements.plist  example_rsa.pem  extract_mac_pkg.sh  filesystem.go  gcp.go  gcs.go  generate_example_notary_certs.sh  keys.go  kolide.go  linux.go  munemo.go  munemo_test.go  osquery.go  osquery_test.go  packaging.go  tenant.go  tenant_test.go
tools/upgrade-exec-service-testing/: README.md  main.go  runlauncher_return.go  svc-manager_windows.go  svc_windows.go  upgrade.go
tools/vscode-debugging/: README.md  postCreateCommand.sh
(+3178 files in other folders)
