load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["download-osquery.go"],
    importpath = "github.com/kolide/launcher/tools",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/packaging:go_default_library",
        "@com_github_kolide_kit//env:go_default_library",
        "@com_github_kolide_kit//fs:go_default_library",
    ],
)

go_binary(
    name = "tools",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
