load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["launcher-pummel.go"],
    importpath = "github.com/kolide/launcher/cmd/launcher-pummel",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/simulator:go_default_library",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_kolide_kit//env:go_default_library",
        "@com_github_kolide_kit//logutil:go_default_library",
        "@com_github_kolide_kit//version:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_binary(
    name = "launcher-pummel",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
