load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["launcher-extension.go"],
    importpath = "github.com/kolide/launcher/cmd/launcher.ext",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/log:go_default_library",
        "//pkg/osquery/table:go_default_library",
        "@com_github_kolide_osquery_go//:go_default_library",
    ],
)

go_binary(
    name = "launcher.ext",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
