load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "control.go",
        "extension.go",
        "flare.go",
        "main.go",
        "options.go",
        "updater.go",
    ],
    importpath = "github.com/kolide/launcher/cmd/launcher",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/autoupdate:go_default_library",
        "//pkg/control:go_default_library",
        "//pkg/debug:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/osquery:go_default_library",
        "//pkg/osquery/runtime:go_default_library",
        "//pkg/osquery/table:go_default_library",
        "//pkg/service:go_default_library",
        "@com_github_boltdb_bolt//:go_default_library",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_kolide_kit//actor:go_default_library",
        "@com_github_kolide_kit//env:go_default_library",
        "@com_github_kolide_kit//fs:go_default_library",
        "@com_github_kolide_kit//ulid:go_default_library",
        "@com_github_kolide_kit//version:go_default_library",
        "@com_github_kolide_osquery_go//:go_default_library",
        "@com_github_kolide_osquery_go//plugin/config:go_default_library",
        "@com_github_kolide_osquery_go//plugin/distributed:go_default_library",
        "@com_github_kolide_osquery_go//plugin/logger:go_default_library",
        "@com_github_kolide_updater//tuf:go_default_library",
        "@com_github_oklog_run//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_binary(
    name = "launcher",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
