load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["package-builder.go"],
    importpath = "github.com/kolide/launcher/cmd/package-builder",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/packaging:go_default_library",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_kolide_kit//env:go_default_library",
        "@com_github_kolide_kit//version:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_binary(
    name = "package-builder",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
