load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "osquery.go",
        "packaging.go",
    ],
    importpath = "github.com/kolide/launcher/pkg/packaging",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_kolide_kit//fs:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
