load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "command.go",
        "options.go",
    ],
    importpath = "github.com/kolide/launcher/pkg/ptycmd",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_kr_pty//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
