load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "option.go",
        "webtty.go",
    ],
    importpath = "github.com/kolide/launcher/pkg/webtty",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
