load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["generate_tuf.go"],
    importpath = "github.com/kolide/launcher/tools/notary",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_kolide_kit//fs:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_theupdateframework_notary//client:go_default_library",
        "@com_github_theupdateframework_notary//trustpinning:go_default_library",
        "@com_github_theupdateframework_notary//tuf/data:go_default_library",
    ],
)

go_binary(
    name = "notary",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
