load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["runtime.go"],
    importpath = "github.com/kolide/launcher/pkg/osquery/runtime",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/osquery/table:go_default_library",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_kolide_osquery_go//:go_default_library",
        "@com_github_kolide_osquery_go//plugin/config:go_default_library",
        "@com_github_kolide_osquery_go//plugin/distributed:go_default_library",
        "@com_github_kolide_osquery_go//plugin/logger:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
        "@org_golang_x_time//rate:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["runtime_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_kolide_kit//testutil:go_default_library",
        "@com_github_kolide_osquery_go//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
