load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "launcher_proto",
    srcs = ["launcher.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "launcher_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/kolide/launcher/pkg/pb/launcher",
    proto = ":launcher_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["launcher.go"],
    embed = [":launcher_go_proto"],
    importpath = "github.com/kolide/launcher/pkg/pb/launcher",
    visibility = ["//visibility:public"],
)
