load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "github.com/kolide/launcher/pkg/service/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/service:go_default_library",
        "@com_github_kolide_osquery_go//plugin/distributed:go_default_library",
        "@com_github_kolide_osquery_go//plugin/logger:go_default_library",
    ],
)
